fix homepage feature block alignment

--- a/frontend/src/pages/public/Index.css
+++ b/frontend/src/pages/public/Index.css
@@ -42,10 +42,12 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     gap: 1rem;
 
     & .feature {
+        padding: 1rem;
+
         background-color: rgba(0, 0, 0, 0.733);
         border-radius: 2rem;
 
@@ -57,6 +59,14 @@
         & img {
             max-width: 80%;
             max-height: 80%;
+        }
+
+        & p {
+            text-align: center;
+        }
+
+        & h2 {
+            text-align: center;
         }
     }
     
